[gd_scene load_steps=3 format=3 uid="uid://c40rygiaacefe"]

[ext_resource type="Script" path="res://prog_52b.gd" id="1_dgcq4"]

[sub_resource type="LabelSettings" id="LabelSettings_jatg1"]
font_size = 33

[node name="Prog52b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgcq4")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 6.0
offset_right = 649.0
offset_bottom = 55.0
text = "Number 1:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 6.0
offset_right = 1123.0
offset_bottom = 55.0
text = "Number 2:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 172.0
offset_right = 657.0
offset_bottom = 221.0
text = "Number 3:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 172.0
offset_right = 1131.0
offset_bottom = 221.0
text = "Number 4:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 333.0
offset_right = 643.0
offset_bottom = 382.0
text = "Sum:"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="lblAve" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 335.0
offset_right = 1130.0
offset_bottom = 384.0
text = "Average:
"
label_settings = SubResource("LabelSettings_jatg1")
horizontal_alignment = 1

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 690.0
offset_top = 54.0
offset_right = 1045.0
offset_bottom = 161.0

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 56.0
offset_right = 560.0
offset_bottom = 163.0

[node name="txtNum4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 690.0
offset_top = 216.0
offset_right = 1045.0
offset_bottom = 323.0

[node name="txtNum3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 218.0
offset_right = 560.0
offset_bottom = 325.0

[node name="btnCalculate" type="Button" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 415.0
offset_right = 358.0
offset_bottom = 512.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 503.0
offset_top = 415.0
offset_right = 743.0
offset_bottom = 512.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 858.0
offset_top = 415.0
offset_right = 1098.0
offset_bottom = 512.0
text = "Exit"

[connection signal="pressed" from="btnCalculate" to="." method="_on_btn_calculate_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
